--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,22 @@
 {
     "name": "angular-Openlayers",
     "version": "0.0.1",
+	"main": ["dist/angular-Openlayers", "dist/angular-Openlayers.min"],
+	"ignore": [
+        "src",
+        "app",
+		"test",
+        ".editorconfig",
+        ".gitignore",
+        "karma-unit.conf.js",
+        ".jshintrc",
+        "bower.json",
+        "gruntfile.js",
+        "package.json",
+        "README.md"
+    ],
     "dependencies": {
-        "angular": "~1.0.7",
-        "angular-sanitize": "~1.0.7"
+        "angular": "~1.0.7"
     },
     "devDependencies": {
         "angular-mocks": "~1.0.7",
