--- a/bower.json
+++ b/bower.json
@@ -11,16 +11,16 @@
         "karma-unit.conf.js",
         ".jshintrc",
         "bower.json",
-        "gruntfile.js",
+        "Gruntfile.js",
         "package.json",
         "README.md"
     ],
     "dependencies": {
-        "angular": "~1.0.7"
+        "angular": "~1.2.13"
     },
     "devDependencies": {
-        "angular-mocks": "~1.0.7",
-        "angular-scenario": "~1.0.7"
+        "angular-mocks": "~1.2.13",
+        "angular-scenario": "~1.2.13"
     }
 }
 
