--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "angular-Openlayers",
     "version": "0.0.2",
-	"main": ["dist/angular-Openlayers.js", "dist/angular-Openlayers.min.js"],
+	"main": ["dist/angular-Openlayers.js"],
 	"ignore": [
         "src",
         "app",
